Fix font color and apply nav breakpoint

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -17,6 +17,7 @@ $breakpoint-desktop: 992px;
 
 /* Colors */
 $bodyColor: $nasaBlack;
-$fontPrimaryColor: #5292FF;
+$fontPrimaryColor: #ffffff;
+$fontAColor: #5292FF;
 $fontMutedColor: #C1C1C1;
 $fontHoverColor: $nasaLightGray;
