--- a/css/style.scss
+++ b/css/style.scss
@@ -275,6 +275,12 @@ p.article-subtitle {
     color: $fontPrimaryColor;
 }
 
+.img-circle {
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+}
+
 .img-banner-container {
     position: relative;
 }
