Improve site responsiveness

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -13,7 +13,8 @@ $nasaLightRed: #EC1E1E;
 
 /* Media Queries */
 $breakpoint-mobile: 576px;
-$breakpoint-desktop: 992px;
+$breakpoint-desktop: 1200px;
+$breakpoint-nav: 1440px;
 
 /* Colors */
 $bodyColor: $nasaBlack;
