--- a/css/style.scss
+++ b/css/style.scss
@@ -92,12 +92,6 @@ strong {
 /* Classes */
 /***********/
 
-.container {
-    max-width: 100%;
-    padding-left: 11%;
-    padding-right: 11%;
-}
-
 /* Utility */
 
 .btn-primary {
@@ -409,20 +403,38 @@ p.article-subtitle {
 /* Breakpoints */
 /***************/
 
+@media screen and (max-width: $breakpoint-nav) {
+    .mx-xl-3 {
+        margin-left: 2% !important;
+        margin-right: 2% !important;
+    }
+}
+
+
+
 /* Desktop Queries */
 @media screen and (min-width: $breakpoint-desktop) {
     .collapse.navbar-collapse {
-        margin-right: 10%;
+        margin-right: 17%;
     }
 
-    .navbar-brand {
-        margin-left: 10%;
+    .container {
+        max-width: 66%;
     }
 
     .dropdown:hover .dropdown-menu {
         display: block;
         margin-top: 0; // remove the gap so it doesn't close
-     }
+    }
+
+    .jumbotron-container {
+        margin-right: 17%;
+        margin-left: 17%;
+    }
+
+    .navbar-brand {
+        margin-left: 17%;
+    }
 
      /* Uniform Columns */
     .uni-header {
@@ -440,10 +452,21 @@ p.article-subtitle {
 
 /* Mobile Queries */
 @media screen and (max-width: $breakpoint-desktop) {
+    .collapse.navbar-collapse {
+        margin-right: 1%;
+    }
+
     .center-on-mobile {
         margin-left: auto;
         margin-right: auto;
         text-align: center;
+        display: block;
+    }
+
+    .jumbotron-container {
+        max-width: 90%;
+        margin-left: auto;
+        margin-right: auto;
         display: block;
     }
 }
