--- a/css/style.scss
+++ b/css/style.scss
@@ -218,6 +218,11 @@ p.article-subtitle {
     font-size: 18px;
 }
 
+.caption {
+    font-size: 16px;
+    color: $fontPrimaryColor;
+}
+
 /* Cards */
 
 .card {
