Match SCSS to 55d1c49

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -4,8 +4,8 @@ $nasaDarkGray: #666666;
 $nasaLightGray: #999999;
 $nasaWhite: #ebebeb;
 $nasaDarkBlue: #021e50;
-$nasaBlue: #032D77;
-$nasaLightBlue: #0645b1;
+$nasaBlue: #0645b1;
+$nasaLightBlue: #063ea0;
 $nasaLighterBlue: #5292FF;
 $nasaDarkRed: #700000;
 $nasaRed: #8f0000;
