--- a/css/style.css
+++ b/css/style.css
@@ -232,8 +232,7 @@ p.article-subtitle {
 
 .img-circle {
   border-radius: 50%;
-  width: 75px;
-  height: 75px; }
+  width: 75px; }
 
 .img-banner-container {
   position: relative; }
