--- a/css/style.scss
+++ b/css/style.scss
@@ -197,7 +197,7 @@ p.article-subtitle {
     text-transform: uppercase;
     color: $nasaLightRed;
     font-weight: 700;
-    font-size: 12x;
+    font-size: 12px;
     margin-bottom: 5px;
 }
 
