--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,8 @@ strong {
 /***********/
 /* Utility */
 .btn-primary {
-  background-color: #15418C;
-  border: 1px solid #245cbd;
+  background-color: #0645b1;
+  border: 1px solid #063ea0;
   font-family: 'Montserrat', sans-serif;
   font-size: 13pt;
   font-weight: 600; }
@@ -232,7 +232,7 @@ p.article-subtitle {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis;}
+  text-overflow: ellipsis; }
 
 .card-text {
   color: #C1C1C1;
@@ -332,7 +332,7 @@ p.article-subtitle {
 
 /* Navs */
 .dropdown-menu {
-  background-color: #15418C; }
+  background-color: #5292FF; }
 
 .dropdown-item {
   color: #ffffff; }
