--- a/css/style.scss
+++ b/css/style.scss
@@ -80,7 +80,7 @@ h6 {
 
 nav {
     background-color: $nasaBlack;
-    border-bottom: 1px solid #C4C4C4;
+    border-bottom: 1px solid #696969;
 }
 
 p {
@@ -278,6 +278,11 @@ p.article-subtitle {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card-text {
@@ -415,7 +420,7 @@ p.article-subtitle {
 }
 
 .nav-search {
-    border: 1px solid rgba($nasaWhite, 0.5);
+    border: 1px solid #535353;
     border-left: none;
     border-collapse: separate; 
     border-top-left-radius: 0;
@@ -429,7 +434,7 @@ p.article-subtitle {
 }
 
 .nav-search-btn {
-    border: 1px solid rgba($nasaWhite, 0.5);
+    border: 1px solid #535353;
     border-right: none;
     border-collapse: separate; 
     border-top-left-radius: .5rem;
